--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             fotos.</p>
             <div>
                 <video autoplay muted loop>
-                    <source src="src/fotos/crear-grupos.mp4" type="video/mp4">
+                    <source src="src/fotos/crear-grupo.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
@@ -84,6 +84,11 @@
             <p class="explicacion">Comparte el ID que se le              
                 asigna al grupo con el link o 
                 simplemente desde la app. </p>
+            <div>
+                <video autoplay muted loop>
+                    <source src="src/fotos/share-id.mp4" type="video/mp4">
+                </video>
+            </div>
         </div>
         <div>
             <p class="title" >Activa el botón</p>
@@ -91,18 +96,32 @@
                 fotos” dentro de los ajustes                    
                 del grupo al que vas a enviar
                 las fotos. </p>
+            <div>
+                <img src="src/fotos/boton.png" alt="Apretar botón">
+            </div>
         </div>
         <div class="sacarFotos" >
             <p class="title" >¡SACA FOTOS!</p>
-            <p class="explicacion">Empieza a sacar fotos y <span>automáticamente </span>
+            <p class="explicacion">Saca fotos y <span>automáticamente </span>
                 se guardarán en el grupo/grupos 
-                que habías seleccionado.</p>
+                que habías seleccionado.<br>
+                Además, puedes subirlas desde nuestra página web.</p>
+            <div>
+                <video autoplay muted loop>
+                    <source src="src/fotos/subir-desde-web.mp4" type="video/mp4">
+                </video>
+            </div>
         </div>
         <div  >
             <p class="title" >DESCARGÁ TODO</p>
             <p class="explicacion">Por último, tienes la opción de descargar
                 las fotos desde nuestra página web. 
             </p>
+            <div>
+                <video autoplay muted loop>
+                    <source src="src/fotos/descargar-fotos.mov" type="video/mp4">
+                </video>
+            </div>
         </div>
         
     </section>
